# painter-critic-agents

./: .gitignore  Plan.md  README.md  Tasklist.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: implementer.md  reviewer.md  system-architect.md  test-writer.md
.claude/plans/: implementation-plan.md
.claude/rules/: testing.md
.claude/skills/python-skill/: SKILL.md
painter_critic/: __main__.py  agents.py  canvas.py  config.py  hooks.py  main.py  tools.py
tests/: conftest.py  test_acceptance_hooks.py  test_acceptance_main.py  test_acceptance_tools.py  test_agents.py  test_agents_unit.py  test_canvas.py  test_config.py  test_hooks.py  test_main.py  test_tools.py
